[gd_scene load_steps=14 format=4 uid="uid://cuvbfxwo4b5ba"]

[ext_resource type="Script" path="res://scripts/map_00.gd" id="1_ja8lf"]
[ext_resource type="Texture2D" uid="uid://bvaje6x1f1ams" path="res://assets/tilesets/grass.png" id="2_16mpk"]
[ext_resource type="Texture2D" uid="uid://cm46c0r403ya7" path="res://assets/tilesets/plains.png" id="3_1kdfo"]
[ext_resource type="Texture2D" uid="uid://t0axy8rlc4jy" path="res://assets/tilesets/fences.png" id="4_qw64x"]
[ext_resource type="Texture2D" uid="uid://mygq5183iqeo" path="res://assets/objects/objects.png" id="5_w2au1"]
[ext_resource type="PackedScene" uid="uid://c8601bjak68kp" path="res://scenes/player.tscn" id="6_vn51m"]
[ext_resource type="PackedScene" uid="uid://bs3gsnkoitv8r" path="res://scenes/slime.tscn" id="7_yhmoa"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2uqlx"]
texture = ExtResource("2_16mpk")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8kq1g"]
texture = ExtResource("3_1kdfo")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_eg5ad"]
texture = ExtResource("4_qw64x")
0:0/0 = 0
0:0/0/y_sort_origin = 4
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.7247, -5.35467, 5.35466, -5.03968, 4.40972, 2.83482, 2.20486, 8, -2.20486, 8, -3.1498, 2.20486)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.7247, -5.35467, -1.5749, -8, 2.51984, -8, 5.35466, -5.03968, 4.40972, 2.83482, 2.20486, 8, -2.20486, 8, -3.1498, 2.20486)
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xsnhx"]
texture = ExtResource("5_w2au1")
0:0/0 = 0
0:0/0/y_sort_origin = 4
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0, 8, 0.629959, 8, 1.88988, 1.5749, 2.20486, 0.31498, 4.7247, -2.20486, 1.88988, -8, 2.83482)
5:0/0 = 0
5:0/0/y_sort_origin = 4
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0.629959, 8, 1.25992, 8, 5.66964, -8, 5.35466)
0:1/0 = 0
0:1/0/y_sort_origin = 5
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 0.629959, 5.35466, 1.25992, 5.03968, 8, -3.1498, 8)
0:5/size_in_atlas = Vector2i(3, 4)
0:5/0 = 0
0:5/0/y_sort_origin = 25
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-10.3944, 13.8591, 7.55952, 12.5992, 11.9692, 19.2138, 9.13443, 25.8284, 1.5749, 24.8834, -4.40973, 26.4583, -7.55953, 22.6786, -12.2842, 22.3636)
6:7/size_in_atlas = Vector2i(2, 2)
6:7/0 = 0
6:7/0/y_sort_origin = 5
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-15.749, 7.8745, 14.8041, 6.92957, 9.76439, 13.8591, 0.944939, 13.2292, -2.20486, 15.1191, -11.6543, 14.8041)
8:6/size_in_atlas = Vector2i(2, 3)
8:6/0 = 0
8:6/0/y_sort_origin = 17
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.61459, 16.694, 6.92957, 16.694, 5.03968, 20.4737, -1.25992, 21.4187, -6.29961, 20.1587)
10:7/size_in_atlas = Vector2i(2, 2)
10:7/0 = 0
10:7/0/y_sort_origin = 4
10:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12.2842, 0.944939, -8, -2.20486, 8, -1.88988, 12.2842, 1.88988, 8, 8, -8, 8)
11:2/size_in_atlas = Vector2i(1, 2)
11:2/0 = 0
10:0/size_in_atlas = Vector2i(2, 1)
10:0/0 = 0

[sub_resource type="TileSet" id="TileSet_02lc0"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_2uqlx")
sources/1 = SubResource("TileSetAtlasSource_8kq1g")
sources/2 = SubResource("TileSetAtlasSource_eg5ad")
sources/4 = SubResource("TileSetAtlasSource_xsnhx")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8258e"]
size = Vector2(53, 24)

[node name="map_00" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_ja8lf")

[node name="ground" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAQACAAAAAAAAAAkAAQACAAEAAAAAAAoAAQACAAIAAAAAAAsAAAAAAAAAAAAAAAwAAAAAAAAAAAAAAA0AAAAAAAAAAAAAAA4AAAAAAAAAAAAAAA8AAAAAAAAAAAAAABAAAAAAAAAAAAAAABEAAAAAAAAAAAAAABIAAAAAAAAAAAAAABMAAAAAAAAAAAAAABQAAAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAAAAAAAAAABAAcAAAAAAAAAAAABAAgAAQACAAAAAAABAAkAAQACAAEAAAABAAoAAQACAAIAAAABAAsAAAAAAAAAAAABAAwAAAAAAAAAAAABAA0AAAAAAAAAAAABAA4AAAAAAAAAAAABAA8AAAAAAAAAAAABABAAAAAAAAAAAAABABEAAAAAAAAAAAABABIAAAAAAAAAAAABABMAAAAAAAAAAAABABQAAAAAAAAAAAACAAAAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAACAAgAAQACAAAAAAACAAkAAQACAAEAAAACAAoAAQACAAIAAAACAAsAAAAAAAAAAAACAAwAAAAAAAAAAAACAA0AAAAAAAAAAAACAA4AAAAAAAAAAAACAA8AAAAAAAAAAAACABAAAAAAAAAAAAACABEAAAAAAAAAAAACABIAAAAAAAAAAAACABMAAAAAAAAAAAACABQAAAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAADAAcAAAAAAAAAAAADAAgAAQACAAAAAAADAAkAAQACAAEAAAADAAoAAQACAAIAAAADAAsAAAAAAAAAAAADAAwAAAAAAAAAAAADAA0AAAAAAAAAAAADAA4AAAAAAAAAAAADAA8AAAAAAAAAAAADABAAAAAAAAAAAAADABEAAAAAAAAAAAADABIAAAAAAAAAAAADABMAAAAAAAAAAAADABQAAAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAEAAcAAAAAAAAAAAAEAAgAAQACAAAAAAAEAAkAAQACAAEAAAAEAAoAAQACAAIAAAAEAAsAAAAAAAAAAAAEAAwAAAAAAAAAAAAEAA0AAAAAAAAAAAAEAA4AAAAAAAAAAAAEAA8AAAAAAAAAAAAEABAAAAAAAAAAAAAEABEAAAAAAAAAAAAEABIAAAAAAAAAAAAEABMAAAAAAAAAAAAEABQAAAAAAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAcAAAAAAAAAAAAFAAgAAQACAAAAAAAFAAkAAQACAAEAAAAFAAoAAQACAAIAAAAFAAsAAAAAAAAAAAAFAAwAAAAAAAAAAAAFAA0AAAAAAAAAAAAFAA4AAAAAAAAAAAAFAA8AAAAAAAAAAAAFABAAAAAAAAAAAAAFABEAAAAAAAAAAAAFABIAAAAAAAAAAAAFABMAAAAAAAAAAAAFABQAAAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAYAAAAAAAAAAAAGAAcAAAAAAAAAAAAGAAgAAQACAAAAAAAGAAkAAQACAAEAAAAGAAoAAQACAAIAAAAGAAsAAAAAAAAAAAAGAAwAAAAAAAAAAAAGAA0AAAAAAAAAAAAGAA4AAAAAAAAAAAAGAA8AAAAAAAAAAAAGABAAAAAAAAAAAAAGABEAAAAAAAAAAAAGABIAAAAAAAAAAAAGABMAAAAAAAAAAAAGABQAAAAAAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAAHAAcAAAAAAAAAAAAHAAgAAQACAAAAAAAHAAkAAQACAAEAAAAHAAoAAQACAAIAAAAHAAsAAAAAAAAAAAAHAAwAAAAAAAAAAAAHAA0AAAAAAAAAAAAHAA4AAAAAAAAAAAAHAA8AAAAAAAAAAAAHABAAAAAAAAAAAAAHABEAAAAAAAAAAAAHABIAAAAAAAAAAAAHABMAAAAAAAAAAAAHABQAAAAAAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAUAAAAAAAAAAAAIAAYAAAAAAAAAAAAIAAcAAAAAAAAAAAAIAAgAAQACAAAAAAAIAAkAAQACAAEAAAAIAAoAAQACAAIAAAAIAAsAAAAAAAAAAAAIAAwAAAAAAAAAAAAIAA0AAAAAAAAAAAAIAA4AAAAAAAAAAAAIAA8AAAAAAAAAAAAIABAAAAAAAAAAAAAIABEAAAAAAAAAAAAIABIAAAAAAAAAAAAIABMAAAAAAAAAAAAIABQAAAAAAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAAAAAAJAAgAAQACAAAAAAAJAAkAAQACAAEAAAAJAAoAAQACAAIAAAAJAAsAAAAAAAAAAAAJAAwAAAAAAAAAAAAJAA0AAAAAAAAAAAAJAA4AAAAAAAAAAAAJAA8AAAAAAAAAAAAJABAAAAAAAAAAAAAJABEAAAAAAAAAAAAJABIAAAAAAAAAAAAJABMAAAAAAAAAAAAJABQAAAAAAAAAAAAKAAAAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAcAAAAAAAAAAAAKAAgAAQACAAAAAAAKAAkAAQACAAEAAAAKAAoAAQAFAAAAAAAKAAsAAQABAAIAAAAKAAwAAAAAAAAAAAAKAA0AAAAAAAAAAAAKAA4AAAAAAAAAAAAKAA8AAAAAAAAAAAAKABAAAAAAAAAAAAAKABEAAAAAAAAAAAAKABIAAAAAAAAAAAAKABMAAAAAAAAAAAAKABQAAAAAAAAAAAALAAAAAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAALAAQAAAAAAAAAAAALAAUAAAAAAAAAAAALAAYAAAAAAAAAAAALAAcAAAAAAAAAAAALAAgAAQACAAAAAAALAAkAAQACAAEAAAALAAoAAQACAAEAAAALAAsAAQACAAIAAAALAAwAAAAAAAAAAAALAA0AAAAAAAAAAAALAA4AAAAAAAAAAAALAA8AAAAAAAAAAAALABAAAAAAAAAAAAALABEAAAAAAAAAAAALABIAAAAAAAAAAAALABMAAAAAAAAAAAALABQAAAAAAAAAAAAMAAAAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAAAAAAAAAAMAAcAAAAAAAAAAAAMAAgAAQADAAAAAAAMAAkAAQAEAAEAAAAMAAoAAQACAAEAAAAMAAsAAQAFAAAAAAAMAAwAAQABAAIAAAAMAA0AAAAAAAAAAAAMAA4AAAAAAAAAAAAMAA8AAAAAAAAAAAAMABAAAAAAAAAAAAAMABEAAAAAAAAAAAAMABIAAAAAAAAAAAAMABMAAAAAAAAAAAAMABQAAAAAAAAAAAANAAAAAAAAAAAAAAANAAEAAAAAAAAAAAANAAIAAAAAAAAAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAANAAUAAAAAAAAAAAANAAYAAAAAAAAAAAANAAcAAAAAAAAAAAANAAgAAAAAAAAAAAANAAkAAQACAAAAAAANAAoAAQACAAEAAAANAAsAAQACAAEAAAANAAwAAQAFAAAAAAANAA0AAQABAAIAAAANAA4AAAAAAAAAAAANAA8AAAAAAAAAAAANABAAAAAAAAAAAAANABEAAAAAAAAAAAANABIAAAAAAAAAAAANABMAAAAAAAAAAAANABQAAAAAAAAAAAAOAAAAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAYAAAAAAAAAAAAOAAcAAAAAAAAAAAAOAAgAAAAAAAAAAAAOAAkAAQADAAAAAAAOAAoAAQAEAAEAAAAOAAsAAQACAAEAAAAOAAwAAQACAAEAAAAOAA0AAQAFAAAAAAAOAA4AAQABAAIAAAAOAA8AAAAAAAAAAAAOABAAAAAAAAAAAAAOABEAAAAAAAAAAAAOABIAAAAAAAAAAAAOABMAAAAAAAAAAAAOABQAAAAAAAAAAAAPAAAAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAkAAAAAAAAAAAAPAAoAAQADAAAAAAAPAAsAAQAEAAEAAAAPAAwAAQACAAEAAAAPAA0AAQACAAEAAAAPAA4AAQACAAIAAAAPAA8AAAAAAAAAAAAPABAAAAAAAAAAAAAPABEAAAAAAAAAAAAPABIAAAAAAAAAAAAPABMAAAAAAAAAAAAPABQAAAAAAAAAAAAQAAAAAAAAAAAAAAAQAAEAAAAAAAAAAAAQAAIAAAAAAAAAAAAQAAMAAAAAAAAAAAAQAAQAAAAAAAAAAAAQAAUAAAAAAAAAAAAQAAYAAAAAAAAAAAAQAAcAAAAAAAAAAAAQAAgAAAAAAAAAAAAQAAkAAAAAAAAAAAAQAAoAAAAAAAAAAAAQAAsAAQADAAAAAAAQAAwAAQAEAAEAAAAQAA0AAQACAAEAAAAQAA4AAQAFAAAAAAAQAA8AAQABAAEAAAAQABAAAQABAAEAAAAQABEAAQABAAEAAAAQABIAAQABAAEAAAAQABMAAQABAAEAAAAQABQAAQABAAEAAAARAAAAAAAAAAAAAAARAAEAAAAAAAAAAAARAAIAAAAAAAAAAAARAAMAAAAAAAAAAAARAAQAAAAAAAAAAAARAAUAAAAAAAAAAAARAAYAAAAAAAAAAAARAAcAAAAAAAAAAAARAAgAAAAAAAAAAAARAAkAAAAAAAAAAAARAAoAAAAAAAAAAAARAAsAAAAAAAAAAAARAAwAAQACAAAAAAARAA0AAQACAAEAAAARAA4AAQACAAEAAAARAA8AAQACAAEAAAARABAAAQACAAEAAAARABEAAQACAAEAAAARABIAAQACAAEAAAARABMAAQACAAEAAAARABQAAQACAAEAAAASAAAAAAAAAAAAAAASAAEAAAAAAAAAAAASAAIAAAAAAAAAAAASAAMAAAAAAAAAAAASAAQAAAAAAAAAAAASAAUAAAAAAAAAAAASAAYAAAAAAAAAAAASAAcAAAAAAAAAAAASAAgAAAAAAAAAAAASAAkAAAAAAAAAAAASAAoAAAAAAAAAAAASAAsAAAAAAAAAAAASAAwAAQACAAAAAAASAA0AAQACAAEAAAASAA4AAQAEAAAAAAASAA8AAQADAAEAAAASABAAAQADAAEAAAASABEAAQADAAEAAAASABIAAQADAAEAAAASABMAAQADAAEAAAASABQAAQADAAEAAAATAAAAAAAAAAAAAAATAAEAAAAAAAAAAAATAAIAAAAAAAAAAAATAAMAAAAAAAAAAAATAAQAAAAAAAAAAAATAAUAAAAAAAAAAAATAAYAAAAAAAAAAAATAAcAAAAAAAAAAAATAAgAAAAAAAAAAAATAAkAAAAAAAAAAAATAAoAAAAAAAAAAAATAAsAAAAAAAAAAAATAAwAAQACAAAAAAATAA0AAQACAAEAAAATAA4AAQACAAIAAAATAA8AAAAAAAAAAAATABAAAAAAAAAAAAATABEAAAAAAAAAAAATABIAAAAAAAAAAAATABMAAAAAAAAAAAATABQAAAAAAAAAAAAUAAAAAAAAAAAAAAAUAAEAAAAAAAAAAAAUAAIAAAAAAAAAAAAUAAMAAAAAAAAAAAAUAAQAAAAAAAAAAAAUAAUAAAAAAAAAAAAUAAYAAAAAAAAAAAAUAAcAAAAAAAAAAAAUAAgAAAAAAAAAAAAUAAkAAAAAAAAAAAAUAAoAAAAAAAAAAAAUAAsAAAAAAAAAAAAUAAwAAQACAAAAAAAUAA0AAQACAAEAAAAUAA4AAQACAAIAAAAUAA8AAAAAAAAAAAAUABAAAAAAAAAAAAAUABEAAAAAAAAAAAAUABIAAAAAAAAAAAAUABMAAAAAAAAAAAAUABQAAAAAAAAAAAAVAAAAAAAAAAAAAAAVAAEAAAAAAAAAAAAVAAIAAAAAAAAAAAAVAAMAAAAAAAAAAAAVAAQAAAAAAAAAAAAVAAUAAAAAAAAAAAAVAAYAAAAAAAAAAAAVAAcAAAAAAAAAAAAVAAgAAAAAAAAAAAAVAAkAAAAAAAAAAAAVAAoAAAAAAAAAAAAVAAsAAQABAAAAAAAVAAwAAQAFAAEAAAAVAA0AAQACAAEAAAAVAA4AAQACAAIAAAAVAA8AAAAAAAAAAAAVABAAAAAAAAAAAAAVABEAAAAAAAAAAAAVABIAAAAAAAAAAAAVABMAAAAAAAAAAAAVABQAAAAAAAAAAAAWAAAAAAAAAAAAAAAWAAEAAAAAAAAAAAAWAAIAAAAAAAAAAAAWAAMAAAAAAAAAAAAWAAQAAAAAAAAAAAAWAAUAAAAAAAAAAAAWAAYAAAAAAAAAAAAWAAcAAAAAAAAAAAAWAAgAAAAAAAAAAAAWAAkAAAAAAAAAAAAWAAoAAAAAAAAAAAAWAAsAAQACAAAAAAAWAAwAAQACAAEAAAAWAA0AAQACAAEAAAAWAA4AAQACAAIAAAAWAA8AAAAAAAAAAAAWABAAAAAAAAAAAAAWABEAAAAAAAAAAAAWABIAAAAAAAAAAAAWABMAAAAAAAAAAAAWABQAAAAAAAAAAAAXAAAAAAAAAAAAAAAXAAEAAAAAAAAAAAAXAAIAAAAAAAAAAAAXAAMAAAAAAAAAAAAXAAQAAAAAAAAAAAAXAAUAAAAAAAAAAAAXAAYAAAAAAAAAAAAXAAcAAAAAAAAAAAAXAAgAAAAAAAAAAAAXAAkAAAAAAAAAAAAXAAoAAAAAAAAAAAAXAAsAAQACAAAAAAAXAAwAAQACAAEAAAAXAA0AAQAEAAAAAAAXAA4AAQADAAIAAAAXAA8AAAAAAAAAAAAXABAAAAAAAAAAAAAXABEAAAAAAAAAAAAXABIAAAAAAAAAAAAXABMAAAAAAAAAAAAXABQAAAAAAAAAAAAYAAAAAAAAAAAAAAAYAAEAAAAAAAAAAAAYAAIAAAAAAAAAAAAYAAMAAAAAAAAAAAAYAAQAAAAAAAAAAAAYAAUAAAAAAAAAAAAYAAYAAAAAAAAAAAAYAAcAAAAAAAAAAAAYAAgAAAAAAAAAAAAYAAkAAAAAAAAAAAAYAAoAAQABAAAAAAAYAAsAAQAFAAEAAAAYAAwAAQACAAEAAAAYAA0AAQACAAIAAAAYAA4AAAAAAAAAAAAYAA8AAAAAAAAAAAAYABAAAAAAAAAAAAAYABEAAAAAAAAAAAAYABIAAAAAAAAAAAAYABMAAAAAAAAAAAAYABQAAAAAAAAAAAAZAAAAAAAAAAAAAAAZAAEAAAAAAAAAAAAZAAIAAAAAAAAAAAAZAAMAAAAAAAAAAAAZAAQAAAAAAAAAAAAZAAUAAAAAAAAAAAAZAAYAAAAAAAAAAAAZAAcAAAAAAAAAAAAZAAgAAAAAAAAAAAAZAAkAAAAAAAAAAAAZAAoAAQACAAAAAAAZAAsAAQACAAEAAAAZAAwAAQACAAEAAAAZAA0AAQACAAIAAAAZAA4AAAAAAAAAAAAZAA8AAAAAAAAAAAAZABAAAAAAAAAAAAAZABEAAAAAAAAAAAAZABIAAAAAAAAAAAAZABMAAAAAAAAAAAAZABQAAAAAAAAAAAAaAAAAAAAAAAAAAAAaAAEAAAAAAAAAAAAaAAIAAAAAAAAAAAAaAAMAAAAAAAAAAAAaAAQAAAAAAAAAAAAaAAUAAAAAAAAAAAAaAAYAAAAAAAAAAAAaAAcAAAAAAAAAAAAaAAgAAAAAAAAAAAAaAAkAAAAAAAAAAAAaAAoAAQACAAAAAAAaAAsAAQACAAEAAAAaAAwAAQAEAAAAAAAaAA0AAQADAAIAAAAaAA4AAAAAAAAAAAAaAA8AAAAAAAAAAAAaABAAAAAAAAAAAAAaABEAAAAAAAAAAAAaABIAAAAAAAAAAAAaABMAAAAAAAAAAAAaABQAAAAAAAAAAAAbAAAAAAAAAAAAAAAbAAEAAAAAAAAAAAAbAAIAAAAAAAAAAAAbAAMAAAAAAAAAAAAbAAQAAAAAAAAAAAAbAAUAAAAAAAAAAAAbAAYAAAAAAAAAAAAbAAcAAAAAAAAAAAAbAAgAAAAAAAAAAAAbAAkAAAAAAAAAAAAbAAoAAQACAAAAAAAbAAsAAQACAAEAAAAbAAwAAQACAAIAAAAbAA0AAAAAAAAAAAAbAA4AAAAAAAAAAAAbAA8AAAAAAAAAAAAbABAAAAAAAAAAAAAbABEAAAAAAAAAAAAbABIAAAAAAAAAAAAbABMAAAAAAAAAAAAbABQAAAAAAAAAAAAcAAAAAAAAAAAAAAAcAAEAAAAAAAAAAAAcAAIAAAAAAAAAAAAcAAMAAAAAAAAAAAAcAAQAAAAAAAAAAAAcAAUAAAAAAAAAAAAcAAYAAAAAAAAAAAAcAAcAAAAAAAAAAAAcAAgAAAAAAAAAAAAcAAkAAQABAAAAAAAcAAoAAQAFAAEAAAAcAAsAAQACAAEAAAAcAAwAAQACAAIAAAAcAA0AAAAAAAAAAAAcAA4AAAAAAAAAAAAcAA8AAAAAAAAAAAAcABAAAAAAAAAAAAAcABEAAAAAAAAAAAAcABIAAAAAAAAAAAAcABMAAAAAAAAAAAAcABQAAAAAAAAAAAAdAAAAAAAAAAAAAAAdAAEAAAAAAAAAAAAdAAIAAAAAAAAAAAAdAAMAAAAAAAAAAAAdAAQAAAAAAAAAAAAdAAUAAAAAAAAAAAAdAAYAAAAAAAAAAAAdAAcAAQABAAAAAAAdAAgAAQABAAEAAAAdAAkAAQAFAAEAAAAdAAoAAQACAAEAAAAdAAsAAQACAAEAAAAdAAwAAQACAAIAAAAdAA0AAAAAAAAAAAAdAA4AAAAAAAAAAAAdAA8AAAAAAAAAAAAdABAAAAAAAAAAAAAdABEAAAAAAAAAAAAdABIAAAAAAAAAAAAdABMAAAAAAAAAAAAdABQAAAAAAAAAAAAeAAAAAAAAAAAAAAAeAAEAAAAAAAAAAAAeAAIAAAAAAAAAAAAeAAMAAAAAAAAAAAAeAAQAAAAAAAAAAAAeAAUAAAAAAAAAAAAeAAYAAAAAAAAAAAAeAAcAAQACAAAAAAAeAAgAAQACAAEAAAAeAAkAAQACAAEAAAAeAAoAAQACAAEAAAAeAAsAAQACAAEAAAAeAAwAAQACAAIAAAAeAA0AAAAAAAAAAAAeAA4AAAAAAAAAAAAeAA8AAAAAAAAAAAAeABAAAAAAAAAAAAAeABEAAAAAAAAAAAAeABIAAAAAAAAAAAAeABMAAAAAAAAAAAAeABQAAAAAAAAAAAAfAAAAAAAAAAAAAAAfAAEAAAAAAAAAAAAfAAIAAAAAAAAAAAAfAAMAAAAAAAAAAAAfAAQAAQABAAAAAAAfAAUAAQABAAEAAAAfAAYAAQABAAEAAAAfAAcAAQAFAAEAAAAfAAgAAQAEAAAAAAAfAAkAAQADAAEAAAAfAAoAAQAEAAEAAAAfAAsAAQACAAEAAAAfAAwAAQACAAIAAAAfAA0AAAAAAAAAAAAfAA4AAAAAAAAAAAAfAA8AAAAAAAAAAAAfABAAAAAAAAAAAAAfABEAAAAAAAAAAAAfABIAAAAAAAAAAAAfABMAAAAAAAAAAAAfABQAAAAAAAAAAAAgAAAAAAAAAAAAAAAgAAEAAAAAAAAAAAAgAAIAAQABAAAAAAAgAAMAAQABAAEAAAAgAAQAAQAFAAEAAAAgAAUAAQACAAEAAAAgAAYAAQACAAEAAAAgAAcAAQAEAAAAAAAgAAgAAQADAAIAAAAgAAkAAAAAAAAAAAAgAAoAAQACAAAAAAAgAAsAAQACAAEAAAAgAAwAAQACAAIAAAAgAA0AAAAAAAAAAAAgAA4AAAAAAAAAAAAgAA8AAAAAAAAAAAAgABAAAAAAAAAAAAAgABEAAAAAAAAAAAAgABIAAAAAAAAAAAAgABMAAAAAAAAAAAAgABQAAAAAAAAAAAAhAAAAAQABAAEAAAAhAAEAAQABAAEAAAAhAAIAAQAFAAEAAAAhAAMAAQACAAEAAAAhAAQAAQACAAEAAAAhAAUAAQACAAEAAAAhAAYAAQAEAAAAAAAhAAcAAQADAAIAAAAhAAgAAAAAAAAAAAAhAAkAAAAAAAAAAAAhAAoAAQACAAAAAAAhAAsAAQACAAEAAAAhAAwAAQACAAIAAAAhAA0AAAAAAAAAAAAhAA4AAAAAAAAAAAAhAA8AAAAAAAAAAAAhABAAAAAAAAAAAAAhABEAAAAAAAAAAAAhABIAAAAAAAAAAAAhABMAAAAAAAAAAAAhABQAAAAAAAAAAAAiAAAAAQACAAEAAAAiAAEAAQACAAEAAAAiAAIAAQACAAEAAAAiAAMAAQAEAAAAAAAiAAQAAQADAAEAAAAiAAUAAQADAAEAAAAiAAYAAQADAAIAAAAiAAcAAAAAAAAAAAAiAAgAAAAAAAAAAAAiAAkAAAAAAAAAAAAiAAoAAQACAAAAAAAiAAsAAQACAAEAAAAiAAwAAQACAAIAAAAiAA0AAAAAAAAAAAAiAA4AAAAAAAAAAAAiAA8AAAAAAAAAAAAiABAAAAAAAAAAAAAiABEAAAAAAAAAAAAiABIAAAAAAAAAAAAiABMAAAAAAAAAAAAiABQAAAAAAAAAAAAjAAAAAQADAAEAAAAjAAEAAQADAAEAAAAjAAIAAQADAAEAAAAjAAMAAQADAAIAAAAjAAQAAAAAAAAAAAAjAAUAAAAAAAAAAAAjAAYAAAAAAAAAAAAjAAcAAAAAAAAAAAAjAAgAAAAAAAAAAAAjAAkAAAAAAAAAAAAjAAoAAQACAAAAAAAjAAsAAQACAAEAAAAjAAwAAQAFAAAAAAAjAA0AAQABAAIAAAAjAA4AAAAAAAAAAAAjAA8AAAAAAAAAAAAjABAAAAAAAAAAAAAjABEAAAAAAAAAAAAjABIAAAAAAAAAAAAjABMAAAAAAAAAAAAjABQAAAAAAAAAAAAkAAAAAAAAAAAAAAAkAAEAAAAAAAAAAAAkAAIAAAAAAAAAAAAkAAMAAAAAAAAAAAAkAAQAAAAAAAAAAAAkAAUAAAAAAAAAAAAkAAYAAAAAAAAAAAAkAAcAAAAAAAAAAAAkAAgAAAAAAAAAAAAkAAkAAAAAAAAAAAAkAAoAAQACAAAAAAAkAAsAAQACAAEAAAAkAAwAAQACAAEAAAAkAA0AAQACAAIAAAAkAA4AAAAAAAAAAAAkAA8AAAAAAAAAAAAkABAAAAAAAAAAAAAkABEAAAAAAAAAAAAkABIAAAAAAAAAAAAkABMAAAAAAAAAAAAkABQAAAAAAAAAAAAlAAAAAAAAAAAAAAAlAAEAAAAAAAAAAAAlAAIAAAAAAAAAAAAlAAMAAAAAAAAAAAAlAAQAAAAAAAAAAAAlAAUAAAAAAAAAAAAlAAYAAAAAAAAAAAAlAAcAAAAAAAAAAAAlAAgAAAAAAAAAAAAlAAkAAAAAAAAAAAAlAAoAAQADAAAAAAAlAAsAAQAEAAEAAAAlAAwAAQACAAEAAAAlAA0AAQAFAAAAAAAlAA4AAQABAAEAAAAlAA8AAQABAAIAAAAlABAAAAAAAAAAAAAlABEAAAAAAAAAAAAlABIAAAAAAAAAAAAlABMAAAAAAAAAAAAlABQAAAAAAAAAAAAmAAAAAAAAAAAAAAAmAAEAAAAAAAAAAAAmAAIAAAAAAAAAAAAmAAMAAAAAAAAAAAAmAAQAAAAAAAAAAAAmAAUAAAAAAAAAAAAmAAYAAAAAAAAAAAAmAAcAAAAAAAAAAAAmAAgAAAAAAAAAAAAmAAkAAAAAAAAAAAAmAAoAAAAAAAAAAAAmAAsAAQACAAAAAAAmAAwAAQACAAEAAAAmAA0AAQACAAEAAAAmAA4AAQACAAEAAAAmAA8AAQACAAIAAAAmABAAAAAAAAAAAAAmABEAAAAAAAAAAAAmABIAAAAAAAAAAAAmABMAAAAAAAAAAAAmABQAAAAAAAAAAAAnAAAAAAAAAAAAAAAnAAEAAAAAAAAAAAAnAAIAAAAAAAAAAAAnAAMAAAAAAAAAAAAnAAQAAAAAAAAAAAAnAAUAAAAAAAAAAAAnAAYAAAAAAAAAAAAnAAcAAAAAAAAAAAAnAAgAAAAAAAAAAAAnAAkAAAAAAAAAAAAnAAoAAAAAAAAAAAAnAAsAAQADAAAAAAAnAAwAAQAEAAEAAAAnAA0AAQACAAEAAAAnAA4AAQACAAEAAAAnAA8AAQACAAIAAAAnABAAAAAAAAAAAAAnABEAAAAAAAAAAAAnABIAAAAAAAAAAAAnABMAAAAAAAAAAAAnABQAAAAAAAAAAAAoAAAAAAAAAAAAAAAoAAEAAAAAAAAAAAAoAAIAAAAAAAAAAAAoAAMAAAAAAAAAAAAoAAQAAAAAAAAAAAAoAAUAAAAAAAAAAAAoAAYAAAAAAAAAAAAoAAcAAAAAAAAAAAAoAAgAAAAAAAAAAAAoAAkAAAAAAAAAAAAoAAoAAAAAAAAAAAAoAAsAAAAAAAAAAAAoAAwAAQADAAAAAAAoAA0AAQAEAAEAAAAoAA4AAQACAAEAAAAoAA8AAQACAAIAAAAoABAAAAAAAAAAAAAoABEAAAAAAAAAAAAoABIAAAAAAAAAAAAoABMAAAAAAAAAAAAoABQAAAAAAAAAAAApAAAAAAAAAAAAAAApAAEAAAAAAAAAAAApAAIAAAAAAAAAAAApAAMAAAAAAAAAAAApAAQAAAAAAAAAAAApAAUAAAAAAAAAAAApAAYAAAAAAAAAAAApAAcAAAAAAAAAAAApAAgAAAAAAAAAAAApAAkAAAAAAAAAAAApAAoAAAAAAAAAAAApAAsAAAAAAAAAAAApAAwAAAAAAAAAAAApAA0AAQACAAAAAAApAA4AAQACAAEAAAApAA8AAQACAAIAAAApABAAAAAAAAAAAAApABEAAAAAAAAAAAApABIAAAAAAAAAAAApABMAAAAAAAAAAAApABQAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_02lc0")

[node name="cliff" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAA4AAQACAAQAAAABAA4AAQACAAQAAAACAA4AAQACAAQAAAADAA4AAQADAAQAAAADAA8AAQADAAUAAAADABAAAQADAAUAAAADABEAAQAEAAUAAAAEABEAAQACAAQAAAAFABEAAQACAAQAAAAGABEAAQACAAQAAAAHABEAAQACAAQAAAAIABEAAQADAAQAAAAIABIAAQADAAUAAAAIABMAAQADAAUAAAAIABQAAQADAAUAAAAAAA8AAQACAAUAAAAAABAAAQACAAUAAAAAABEAAQACAAUAAAAAABIAAQACAAUAAAAAABMAAQACAAUAAAAAABQAAQACAAUAAAAHABQAAQACAAUAAAAHABMAAQACAAUAAAAHABIAAQACAAUAAAACABEAAQACAAUAAAACABAAAQACAAUAAAACAA8AAQACAAUAAAABAA8AAQACAAUAAAABABAAAQACAAUAAAABABEAAQACAAUAAAAeAAIAAQADAAYAAAAeAAEAAQAEAAQAAAAeAAAAAQACAAUAAAAfAAEAAQACAAYAAAAgAAEAAQADAAYAAAAgAAAAAQADAAUAAAAkAAAAAQABAAUAAAAkAAEAAQABAAUAAAAkAAIAAQABAAUAAAAkAAMAAQABAAYAAAAlAAMAAQACAAYAAAAmAAMAAQACAAYAAAAnAAMAAQADAAYAAAAnAAIAAQAEAAQAAAAoAAIAAQACAAYAAAApAAIAAQACAAYAAAAlAAIAAQACAAUAAAAmAAIAAQACAAUAAAAmAAEAAQACAAUAAAAnAAEAAQACAAUAAAAoAAEAAQACAAUAAAApAAEAAQACAAUAAAApAAAAAQACAAUAAAAoAAAAAQACAAUAAAAnAAAAAQACAAUAAAAmAAAAAQACAAUAAAAlAAAAAQACAAUAAAAlAAEAAQACAAUAAAAfAAAAAQACAAUAAAAdAAIAAQACAAYAAAAcAAIAAQACAAYAAAAbAAMAAQADAAYAAAAaAAMAAQACAAYAAAAZAAMAAQACAAYAAAAYAAIAAQABAAUAAAAYAAEAAQABAAUAAAAYAAAAAQABAAUAAAAYAAMAAQABAAYAAAAbAAIAAQAEAAQAAAAZAAAAAQACAAUAAAAZAAEAAQACAAUAAAAZAAIAAQACAAUAAAAaAAIAAQACAAUAAAAaAAEAAQACAAUAAAAaAAAAAQACAAUAAAAbAAAAAQACAAUAAAAcAAAAAQACAAUAAAAdAAAAAQACAAUAAAAdAAEAAQACAAUAAAAcAAEAAQACAAUAAAAbAAEAAQACAAUAAAABABIAAQACAAUAAAABABMAAQACAAUAAAABABQAAQACAAUAAAACABIAAQACAAUAAAACABMAAQACAAUAAAACABQAAQACAAUAAAADABIAAQACAAUAAAADABMAAQACAAUAAAADABQAAQACAAUAAAAEABIAAQACAAUAAAAEABMAAQACAAUAAAAEABQAAQACAAUAAAAFABIAAQACAAUAAAAFABMAAQACAAUAAAAFABQAAQACAAUAAAAGABIAAQACAAUAAAAGABMAAQACAAUAAAAGABQAAQACAAUAAAA=")
tile_set = SubResource("TileSet_02lc0")

[node name="ysort" type="TileMapLayer" parent="."]
y_sort_enabled = true
use_parent_material = true
tile_map_data = PackedByteArray("AAAPABEAAgAAAAAAAAATABEAAgAAAAAAAAAPABIAAgAAAAEAAAAPABMAAgAAAAEAAAAPABQAAgAAAAEAAAATABIAAgAAAAEAAAATABMAAgAAAAEAAAATABQAAgAAAAEAAAAGAA0ABAAAAAUAAAALABEABAAAAAUAAAAYABEABAAAAAUAAAAdABIABAAAAAUAAAAhAA8ABAAAAAUAAAAnAAYABAAAAAUAAAAUAAYABAAAAAUAAAAPAAIABAAAAAUAAAAHAAIABAAAAAUAAAALAAQABAAIAAYAAAATAAIABAAIAAYAAAAZAAYABAAIAAYAAAAlABIABAAIAAYAAAAKAA0ABAAIAAYAAAAcAA4ABAAKAAcAAAATAAoABAAKAAcAAAAiAAgABAAKAAcAAAAHAAYABAAKAAcAAAAEAAQABAAKAAcAAAACAAMABAAKAAcAAAACAAwABAAKAAcAAAAAAAcABAAAAAAAAAAfAAMABAAAAAAAAAApAAwABAAAAAAAAAAPABAABAAAAAAAAAACABEABAAAAAEAAAAEABMABAAAAAEAAAANAA4ABAAAAAEAAAAQAAYABAAAAAEAAAAWAAMABAAAAAEAAAAoAAMABAAAAAEAAAAcAAMABAAAAAEAAAAhABMABAAAAAEAAAAoABEABAAAAAEAAAATABAABAAFAAAAAAABAAcABAAFAAAAAAA=")
tile_set = SubResource("TileSet_02lc0")

[node name="player" parent="." instance=ExtResource("6_vn51m")]
y_sort_enabled = false
position = Vector2(35, 158)

[node name="slime" parent="." instance=ExtResource("7_yhmoa")]
position = Vector2(249, 205)

[node name="collisions" type="StaticBody2D" parent="."]

[node name="map_00_01" type="CollisionPolygon2D" parent="collisions"]
position = Vector2(0, 2)
polygon = PackedVector2Array(386, -2, 386, 61, 446, 61, 446, 44, 494, 44, 494, 27, 526, 27, 526, -26, 579, -26, 579, 61, 637, 61, 637, 44, 672, 44, 672, 334, 0, 334, 0, -2, -5, -2, -5, 339, 680, 341, 680, -10, 585, -10, 585, -30, 521, -30, 521, -4, 131, -4, 0, -4, 0, -2)

[node name="map01_transition_point" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="map01_transition_point"]
position = Vector2(552.5, -12)
shape = SubResource("RectangleShape2D_8258e")

[connection signal="body_entered" from="map01_transition_point" to="." method="_on_map_01_transition_point_body_entered"]
[connection signal="body_exited" from="map01_transition_point" to="." method="_on_map_01_transition_point_body_exited"]
